# market-beacon

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dev_ci.yml  labeler.yml  release.yml
src/market_beacon/: __main__.py  analysis.py  config.py  main.py
src/market_beacon/api/: __init__.py  auth.py  client.py  exceptions.py  models.py
tests/: test_placeholder.py
